<resources>
    <string name="app_name">T.o.B.e.</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="t4_1_1_p">Liebe deinen Nächsten wie dich selbst, behandele dich stets liebevoll und erwarte von jedem Gegenüber das selbige. Jeder hat das Recht in Würde leben zu dürfen.</string>
    <string name="t4_1_2_p">Svenja Andrea Beck, 17.11.2021</string>
    <string name="t4_h">Was können wir für dich tun</string>
    <string name="t4_1_h">Erfahrene Ansprechpartner</string>
    <string name="t4_1_p">In unserer virtuellen Selbsthilfegruppe findest du 24 Stunden am Tag einen Ansprechpartner.</string>
    <string name="t4_2_h">Austausch mit anderen Betroffenen</string>
    <string name="t4_2_p">Bei uns kannst du dich mit anderen Betroffenen persönlich austauschen.</string>
    <string name="t4_3_h">Emotionale Begleitung</string>
    <string name="t4_3_p">Du bist nicht mehr alleine mit der Situation, wir stehen dir bei.</string>
    <string name="t6_h">Arbeit des Vereins</string>
    <string name="t6_2_h">Was wir bereits im Verein umgesetzt haben</string>
    <string name="t6_2_1_h">Unser Verein hat wichtige Projekte gestartet, um Betroffene zu unterstützen:</string>
    <string name="t6_2_1_1_p">Ein Hilfetelefon für schnelle Hilfe und ein offenes Ohr</string>
    <string name="t6_2_1_2_p">Selbsthilfegruppen für Austausch und gegenseitige Unterstützung</string>
    <string name="t6_2_1_3_p">Rechtsberatung, um Rechte zu verstehen und durchzusetzen</string>
    <string name="t6_2_1_4_p">Vorträge und Workshops mit Expert:innen zu relevanten Themen</string>
    <string name="t6_2_1_5_p">Zusammenarbeit mit Fachleuten für professionelle Unterstützung</string>
    <string name="t6_2_1_6_p">Buchprojekte, um Wissen und Erfahrungen nachhaltig zu teilen</string>
    <string name="t6_2_1_7_p">Gruppen für Betroffene mit Kindern, die auf ihre besonderen Bedürfnisse eingehen</string>
    <string name="t6_2_1_8_p">Ausbildung von Peer Coaches, die durch eigene Erfahrungen anderen helfen</string>
    <string name="t6_2_2_p">Wir sind stolz auf diese Erfolge und arbeiten weiter daran, unser Angebot auszubauen.</string>
    <string name="t6_2_a">Anstehende Angebote anschauen</string>
    <string name="t10_1_h">Liebe hat uns schwach gemacht. Als wir die Liebe zu uns selbst fanden, konnten wir endlich anfangen zu LEBEN.</string>
    <string name="t10_2_h">Wir über uns</string>
    <string name="t10_1_p">T.o.B.e – Toxische Beziehungen überwinden steht für Hoffnung, Mut und echte Veränderung. Wir sind überzeugt: Manchmal reicht ein einziger Moment, ein einziger Impuls, um ein Leben in eine neue Richtung zu lenken.</string>
    <string name="t10_2_p">Seit vier Jahren setzen wir uns mit Herzblut dafür ein, Menschen aus toxischen Beziehungen zu begleiten – behutsam, respektvoll und auf Augenhöhe. Unser Fokus liegt auf Aufklärung, Gleichstellung und dem Schutz vor narzisstischem Missbrauch in Verbindung mit häuslicher Gewalt. Doch vor allem geht es uns um eines: den Menschen wieder an sich selbst glauben zu lassen.</string>
    <string name="t10_3_p">In dieser Zeit ist ein vielfältiges Angebot entstanden, das Betroffenen Orientierung, Halt und konkrete Hilfe bietet – und das bewusst für jeden zugänglich ist. Für einen Jahresbeitrag von nur 40 € ermöglichen wir Zugang zu Vorträgen, Workshops und unterstützenden Formaten, die nicht nur informieren, sondern stärken, auffangen und neue Perspektiven eröffnen.</string>
    <string name="t10_4_p">Wir zeigen Wege auf, wo vorher Ausweglosigkeit war. Wir geben Werkzeuge an die Hand, wo Unsicherheit herrscht. Und wir schaffen Räume, in denen Menschen erkennen dürfen, dass sie nicht allein sind – und dass Veränderung möglich ist.</string>
    <string name="t10_5_p">Unsere Arbeit verlangt Feingefühl, Geduld und tiefes Verständnis. Doch wir glauben fest daran: Jeder Mensch verdient ein Leben frei von Angst und Abhängigkeit. Gemeinsam mit unseren Kooperationspartnern bauen wir ein starkes Netzwerk auf, das trägt, schützt und begleitet. Wir möchten nicht nur helfen.</string>
    <string name="t10_6_p">Wir möchten bewegen – Herzen, Gedanken und letztlich Leben.</string>
    <string name="t20_2_h">§ 2 Zweck des Vereins</string>
    <string name="t20_2_1_h">1. Der Verein verfolgt ausschließlich und unmittelbar gemeinnützige und mildtätige Zwecke im
        Sinne der Abschnitte “steuerbegünstigte Zwecke” der Abgabenordnung.</string>
    <string name="t20_2_2_h">2. Zweck des Vereins ist die Förderung der Gleichberechtigung von Frauen und Männern § 52 (2) S.
        1 Nr. 18. Dies beinhaltet im Einzelnen:</string>
    <string name="t20_2_2_1_p">– Prävention gegen Häusliche Gewalt und Seelischen Missbrauch</string>
    <string name="t20_2_2_2_p">– Wertevermittlung für gegenseitigen Respekt und Toleranz</string>
    <string name="t20_2_2_3_p">– Aufklärung über Narzisstischen Missbrauch und dessen Gefahren</string>
    <string name="t20_2_2_4_p">– Vermittlung von Mut und Hilfestellungen für Betroffene und Angehörige</string>
    <string name="t20_2_3_h">3. Der Satzungszweck wird insbesondere durch folgende Maßnahmen verwirklicht:</string>
    <string name="t20_2_3_1_h">a) Informationsveranstaltungen in Schulen</string>
    <string name="t20_2_3_1_1_p">– zur Aufklärung insbesondere über Gefahren der Häuslichen Gewalt</string>
    <string name="t20_2_3_1_2_p">– Dahingehende Präventionsarbeit / Wie kann ich mich davor schützen</string>
    <string name="t20_2_3_1_3_p">– Vermittlung von Mut und Hilfestellungen für Betroffene</string>
    <string name="t20_2_3_2_h">b) Informationsveranstaltungen in Kommunen</string>
    <string name="t20_2_3_2_1_p">– Zur Aufklärung insbesondere über Gefahren der Häuslichen Gewalt</string>
    <string name="t20_2_3_2_2_p">– Dahingehende Präventionsarbeit / Wie kann ich mir selbst helfen und mich schützen</string>
    <string name="t20_2_3_2_3_p">– Vermittlung von Mut und Hilfestellungen für Betroffene und ihre Angehörigen.</string>
    <string name="t20_2_3_3_h">c) Öffentlichkeitsarbeit in den Schlüsselberufen, die mit diesem Thema konfrontiert sind.</string>
    <string name="t20_2_3_3_1_p">– zur Aufklärung insbesondere über Gefahren der Häuslichen Gewalt</string>
    <string name="t20_2_3_3_2_p">– Dahingehende Präventionsarbeit / Wie können Sie Menschen Hilfestellungen geben.</string>
    <string name="t20_2_3_3_3_p">– Vermittlung von Empathie sowie Hilfe für die Aufarbeitung der Betroffenen.</string>
    <string name="t20_2_3_4_h">4. Der Verein kann seinen Zweck selbst, durch Hilfspersonen im Sinne des § 57 AO oder dadurch
    verwirklichen, dass er Mittel für die Umsetzung der steuerbegünstigten Zwecke einer anderen
    Körperschaft oder für die Verwirklichung steuerbegünstigter Zwecke durch eine juristische Person
    des öffentlichen Rechts beschafft; die Beschaffung von Mitteln für eine unbeschränkt
    steuerpflichtige Körperschaft des privaten
        Rechts setzt voraus, dass diese selbst steuerbegünstigt ist.</string>
    <string name="t20_10_h">§ 10 Mitgliederversammlung</string>
    <string name="t20_10_1_h">1. Die Mitgliederversammlung ist oberstes Organ des Vereins. In der Mitgliederversammlung hat
    jedes Mitglied eine Stimme. Zur Ausübung des Stimmrechtes kann ein anderes Mitglied des Vereins
    schriftlich bevollmächtigt werden. Ein Mitglied darf jedoch nicht mehr als drei
        fremde Stimmen vertreten.</string>
    <string name="t20_10_2_h">2. Die Mitgliederversammlung ist für folgende Aufgaben zuständig:</string>
    <string name="t20_10_2_1_h">a) Entgegennahme und Genehmigung des Jahresberichtes des Vorstandes;</string>
    <string name="t20_10_2_2_h">b) Entlastung des Vorstandes und der Kassenprüfer;</string>
    <string name="t20_10_2_3_h">c) Wahl und Abberufung der Mitglieder des Vorstandes und der Kassenprüfer;</string>
    <string name="t20_10_2_4_h">d) Festsetzung der Höhe der Jahresbeiträge, insbesondere des Mindestbeitrages;</string>
    <string name="t20_10_2_5_h">e) Beschlussfassung über die Beschwerde gegen die Ablehnung eines Aufnahmeantrages sowie die
        Berufung gegen einen Ausscheidungsbeschluss durch den Vorstand;</string>
    <string name="t20_10_2_6_h">f) Ernennung von Ehrenmitgliedern;</string>
    <string name="t20_10_2_7_h">g) Beschlussfassung über die grundlegenden Entscheidungen für die Förderpolitik des Vereins.</string>
    <string name="t20_10_3_h">3. Die Einberufung der Mitgliederversammlung erfolgt durch den 1. Vorsitzenden, bei dessen
    Verhinderung durch den 2. Vorsitzenden. Die Einberufung muss mindestens zwei Wochen vor dem Tag
    der Versammlung unter Angabe der Tagesanordnung schriftlich erfolgen. Die
        Frist beginnt mit dem auf die Absendung der Einberufung folgenden Tag.</string>
    <string name="t20_10_4_h">4. Es kann jedes Mitglied beim Vorstand schriftlich die Ergänzung der Tagesordnung um weitere
    Angelegenheiten – nicht jedoch Satzungsänderungen – beantragen. Die Tagesanordnung ist zu Beginn
    der Mitgliederversammlung durch den Versammlungsleiter
    entsprechend zu ergänzen. Über Anträge auf Ergänzung der Tagesanordnung, die erst in der
    Mitgliederversammlung gestellt werden, beschließt die Mitgliederversammlung. Zur Annahme des
        Antrages ist eine Mehrheit von ¼ der abgegebenen gültigen Stimmen erforderlich.</string>
    <string name="t20_10_5_h">5. Jede ordnungsgemäß geladene Mitgliederversammlung ist beschlussfähig. Die
    Mitgliederversammlung fasst Beschlüsse mit einfacher Mehrheit der abgegebenen Stimmen, soweit
    durch Gesetz oder diese Satzung keine abweichenden Mehrheiten vorgeschrieben sind.
    Enthaltungen werden als nicht erschienene Stimmen gewertet. Bei Stimmengleichheit entscheidet
    die Stimme des Versammlungsleiters. Bei Wahlen entscheidet bei Stimmengleichheit das Los. Die
    Abstimmungsart bestimmt der Versammlungsleiter. Bei Wahlen ist schriftlich und geheim
        abzustimmen, soweit nicht die Mitgliederversammlung eine andere Art der Abstimmung beschließt.</string>
    <string name="t20_10_6_h">6. Über jede Mitgliederversammlung ist ein Protokoll zu errichten, das vom jeweiligen
    Versammlungsleiter und dem Protokollführer zu unterzeichnen ist und von dem jedem Mitglied eine
        Abschrift an die zuletzt bekannte Anschrift oder per E-Mail zu übersenden ist.</string>
    <string name="t20_10_7_h">7. Eine außerordentliche Mitgliederversammlung ist einzuberufen, wenn es das Vereinsinteresse
    erfordert oder die Einberufung von 40 % der Mitglieder unter Angabe des Grundes schriftlich
        verlangt wird. Sie muss innerhalb einer Woche einberufen werden.</string>
    <string name="t20_10_8_h">8. Mitgliederversammlungen finden online via Skype z. B. statt, der Versand der Einladungen
        erfolgt digital per E-Mail.</string>
    <string name="t20_10_9_h">9. Außerordentliche Mitgliederversammlungen
        Hier müssen mindestens 5 Mitglieder anwesend sein, um eine Beschlussfähigkeit zu bewirken.</string>
    <string name="verein">Verein</string>
    <string name="ber_uns">Über uns</string>
    <string name="satzung">Satzung</string>
    <string name="mitglied_werden">Mitglied werden</string>
    <string name="kooperationspartner_unsere_f_rderer">Kooperationspartner / Unsere Förderer</string>
    <string name="unser_angebot">Unser Angebot</string>
    <string name="welche_hilfe_k_nnen_wir_anbieten">Welche Hilfe können wir anbieten</string>
    <string name="safe_place_school_projekt">Safe Place School Projekt</string>
    <string name="faq">FAQ</string>
    <string name="anlaufstellen">Anlaufstellen</string>
    <string name="termine">Termine</string>
    <string name="grevio_bericht">Grevio Bericht</string>
    <string name="blog">Blog</string>
    <string name="spenden">Spenden</string>
    <string name="kontakt">Kontakt</string>
    <string name="finanzierung">Finanzierung</string>
</resources>